<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vaslivanov.calculator.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLCD"
            android:id="@+id/tvLCD"
            android:textSize="60sp"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSeven"
            android:id="@+id/btnSeven"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEight"
            android:id="@+id/btnEight"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNine"
            android:id="@+id/btnNine"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus"
            android:id="@+id/btnPlus"
            android:layout_row="1"
            android:layout_column="3"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFour"
            android:id="@+id/btnFour"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFive"
            android:id="@+id/btnFive"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSix"
            android:id="@+id/btnSix"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMinus"
            android:id="@+id/btnMinus"
            android:layout_row="2"
            android:layout_column="3"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOne"
            android:id="@+id/btnOne"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTwo"
            android:id="@+id/btnTwo"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnThree"
            android:id="@+id/btnThree"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMulti"
            android:id="@+id/btnMulti"
            android:layout_row="3"
            android:layout_column="3"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnZero"
            android:id="@+id/btnZero"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEqual"
            android:id="@+id/btnEqual"
            android:layout_row="4"
            android:layout_column="2"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDiv"
            android:id="@+id/btnDiv"
            android:layout_row="4"
            android:layout_column="3"
            android:textSize="50sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

</GridLayout>
